# chess_ai

./: .gitignore  CNAME  Cargo.toml  README.md  crates.js  index.html  index.js  search-index.js  settings.html  source-files.js
atty/: enum.Stream.html  fn.is.html  fn.isnt.html
chess_ai/: all.html  fn.main.html  index.html  sidebar-items.js
chess_ai/ai/: fn.evaluate_board.html  fn.min_max.html  fn.print_progress.html  fn.turn.html  index.html  sidebar-items.js
chess_ai/engine/: enum.GameState.html  fn.contains_position.html  fn.get_figure.html  fn.get_valid_moves.html  fn.is_board_valid.html  fn.is_checkmate.html  fn.move_figure.html  fn.set_figure.html  index.html  sidebar-items.js  static.INITIAL_BOARD.html  static.POSITIONS_BLACK.html  static.POSITIONS_WHITE.html  type.Board.html  type.Position.html  type.Positions.html
chess_ai/io/: fn.get_str.html  fn.handle_move_request.html  fn.handle_possible_moves_request.html  fn.is_in_movement_set.html  fn.parse_input.html  fn.print_board.html  fn.print_board_with_movements.html  fn.turn.html  fn.validate_coordinate.html  index.html  sidebar-items.js
colored/: all.html
colored/control/: fn.set_virtual_terminal.html  index.html  sidebar-items.js
pkg/: chess_ai.d.ts  chess_ai.js  chess_ai_bg.wasm  chess_ai_bg.wasm.d.ts  package.json
src/: io.rs  lib.rs  main.rs  quick_rust_explanation.md
src/ai/: evaluation.rs  mod.rs
src/atty/: lib.rs.html
src/chess_ai/: io.rs.html  main.rs.html
src/colored/: color.rs.html  control.rs.html  lib.rs.html  style.rs.html
src/engine/: engine.rs  mod.rs  (+2 more)
winapi/: all.html
(+472 files in other folders)
