[package]
name = "chess_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
colored = "2.0.0"
console_error_panic_hook = "0.1.7"
wasm-timer = "0.2.5"

[lib]
crate-type = ["cdylib", "rlib"]
